--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ yarn-error.log*
 /docs/3_embedded/d_python.md
 /docs/1_process/b_aspice_cl3.md
 /docs/1_process/d_sunroof_system_design.md
+/blog/blog_introduce.md
