--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,6 @@ yarn-error.log*
 /docs/2_mbd/d_wiper.md
 /docs/2_mbd/e_window.md
 /docs/2_mbd/f_kalman_filter.md
+/docs/1_majorprj.md
+/docs/1_majorprj
+/docs/process.md
