내용 전체 업데이트

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,4 @@ yarn-error.log*
 /static/img/2_mbd/img4_6_MCU_porting.png
 /docs/3_sideprj/3_hybridprj/b_linux.md
 /docs/3_sideprj/3_hybrid/a_esp32.md
+/static/img/2_mbd/img1_1_kist.png
