링크오류 수정

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,9 @@ yarn-error.log*
 /docs/3_sideprj/3_hybridprj/b_linux.md
 /docs/3_sideprj/3_hybrid/a_esp32.md
 /static/img/2_mbd/img1_1_kist.png
+/static/assets/mbd/Ews_S32K1_FFT.html
+/static/assets/mbd/Ews_S32K1_FFT.html
+/static/assets/kalman/Maxon_Motor_1_ObserverStateFB_.html
+/static/assets/kalman/Maxon_Motor_2_RobustStateFB_.html
+/static/assets/kalman/Maxon_Motor_3_Kalman_.html
+/static/assets/kalman/Maxon_Motor_4_Stochastic_.html
