이미지 위치 변경

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,8 @@ yarn-error.log*
 /static/assets/kalman/Maxon_Motor_2_RobustStateFB_.html
 /static/assets/kalman/Maxon_Motor_3_Kalman_.html
 /static/assets/kalman/Maxon_Motor_4_Stochastic_.html
+/static/img/2_mbd/Esc_1_Architecture_Desing.png
+/static/img/2_mbd/Esc_2_Architecture_Total.png
+/static/img/2_mbd/Esc_3_Design_Realization.png
+/static/img/2_mbd/Esc_4_Reqs_based_Func_Test.png
+/static/img/2_mbd/Esc_5_All_Traceability.png
