--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,6 @@ yarn-error.log*
 /static/img/2_mbd/Esc_3_Design_Realization.png
 /static/img/2_mbd/Esc_4_Reqs_based_Func_Test.png
 /static/img/2_mbd/Esc_5_All_Traceability.png
+/docs/1_mycareer/a_mycareer_contents_mbd.md
+/docs/1_mycareer/b_mycareer_contents_process.md
+/docs/1_mycareer/c_mycareer_contents_embedded.md
