--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,8 @@ yarn-error.log*
 /docs/1_mycareer/a_mycareer_contents_mbd.md
 /docs/1_mycareer/b_mycareer_contents_process.md
 /docs/1_mycareer/c_mycareer_contents_embedded.md
+/static/img/2_mbd/Esc_5_All_Traceability.png
+/static/img/2_mbd/Esc_1_Architecture_Desing.png
+/static/img/2_mbd/Esc_2_Architecture_Total.png
+/static/img/2_mbd/Esc_3_Design_Realization.png
+/static/img/2_mbd/Esc_4_Reqs_based_Func_Test.png
