--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,5 @@ yarn-error.log*
 /static/img/1_process/f_process_gitlab_Escalator.png
 /static/img/1_process/f_process_gitlab_Escalator_Gantt.png
 /static/img/1_process/f_process_gitlab_Escalator_Github.png
+/static/assets/MyongJi_ChuldongShim_Paper_2008.pdf
+/static/assets/ChuldongShim_Curriculum_Vitae_230130_3.pdf
