이력서 업데이트

--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,5 @@ yarn-error.log*
 /static/img/1_process/f_process_gitlab_Escalator_Github.png
 /static/assets/MyongJi_ChuldongShim_Paper_2008.pdf
 /static/assets/ChuldongShim_Curriculum_Vitae_230130_3.pdf
+/static/assets/ChuldongShim_Curriculum_Vitae_v13_230204.pdf
+/static/img/ChuldongShim_Curriculum_Vitae_v13_230204.png
