사이드바에 bldc확장보드 추가

--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,4 @@ yarn-error.log*
 /static/assets/ChuldongShim_Curriculum_Vitae_230130_3.pdf
 /static/assets/ChuldongShim_Curriculum_Vitae_v13_230204.pdf
 /static/img/ChuldongShim_Curriculum_Vitae_v13_230204.png
+/docs/2_devprj/1_ews2/c_ews2_usage.md
