--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,4 @@ yarn-error.log*
 /static/assets/ChuldongShim_Curriculum_Vitae_v13_230204.pdf
 /static/img/ChuldongShim_Curriculum_Vitae_v13_230204.png
 /docs/2_devprj/1_ews2/c_ews2_usage.md
+/docs/2_devprj/2_bldc/b_bldc_spec.md
