--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,8 @@ yarn-error.log*
 /docs/2_devprj/1_ews2/c_ews2_usage.md
 /docs/2_devprj/2_bldc/b_bldc_spec.md
 /static/assets/ChuldongShim_Curriculum_Vitae_v13_230212.pdf
+/docs/2_devprj/1_ews2
+/docs/2_devprj/a_ews2.md
+/docs/2_devprj/4_eyeRec
+/docs/2_devprj/d_eyeRec.md
+/docs/2_devprj/b_bldc.md
