--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,4 @@ yarn-error.log*
 /docs/2_devprj/4_eyeRec
 /docs/2_devprj/d_eyeRec.md
 /docs/2_devprj/b_bldc.md
+/docs/2_devprj/2_bldc/a_bldc_guide.md
