파일 이름 정리

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,6 @@ yarn-error.log*
 /docs/2_devprj/d_eyeRec.md
 /docs/2_devprj/b_bldc.md
 /docs/2_devprj/2_bldc/a_bldc_guide.md
+/docs/3_devprj.md
+/docs/2_careerbrief.md
+/docs/2_careerdetail.md
