목차 정리 및 eyeRec 동영상 추가

--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,5 @@ yarn-error.log*
 /docs/3_devprj.md
 /docs/2_careerbrief.md
 /docs/2_careerdetail.md
+/docs/2_history/1_embed/3_linux/3_eyeRec/eyeRec_guide.md
+/docs/2_history/1_embed/3_linux/3_eyeRec/eyeRec_spec.md
