--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,7 @@ yarn-error.log*
 /docs/2_careerdetail.md
 /docs/2_history/1_embed/3_linux/3_eyeRec/eyeRec_guide.md
 /docs/2_history/1_embed/3_linux/3_eyeRec/eyeRec_spec.md
+/docs/1_mycareer/1_contents/c_myembedded.md
+/docs/1_mycareer/1_contents/a_mymbd.md
+/docs/2_history/3_proc/2_aspice.md
+/docs/1_mycareer/1_contents/b_myprocess.md
