첫페이지 이미지 CAN-FD 하나로 합침

--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,5 @@ yarn-error.log*
 /docs/1_mycareer/1_contents/a_mymbd.md
 /docs/2_history/3_proc/2_aspice.md
 /docs/1_mycareer/1_contents/b_myprocess.md
+/static/img/seventh_embedded_can.png
+/static/img/seventh_embedded_linux.svg
