CAN통신 프로젝트 이미지 추가

--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,5 @@ yarn-error.log*
 /docs/1_mycareer/1_contents/b_myprocess.md
 /static/img/seventh_embedded_can.png
 /static/img/seventh_embedded_linux.svg
+/static/img/6_ethM/ethM_packet_for_can_canfd.svg
+/static/img/6_ethM/ethM_Concept.jpg
