--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,4 @@ yarn-error.log*
 /static/img/seventh_embedded_linux.svg
 /static/img/6_ethM/ethM_packet_for_can_canfd.svg
 /static/img/6_ethM/ethM_Concept.jpg
+/docs/1_mycareer/a_contents.md
